IF (NOT SAMRAI_DIR)
    SET(SAMRAI_DIR /pkg/SAMRAI/3.11.0-debug)
ENDIF (NOT SAMRAI_DIR)

FIND_PACKAGE(SAMRAI)

SET(OCCT_PREFER_COMMUNITY_EDITION ON)

FIND_PACKAGE(OCE 0.17 REQUIRED)
MESSAGE("-- OCE Found:${OCE_LIBRARIES} INCLUDE:${OCE_INCLUDE_DIRS}")

IF (NOT MOAB_DIR)
    SET(MOAB_DIR /pkg/sigma/1.2/lib)
    SET(MeshKit_DIR /pkg/sigma/1.2/lib)
ENDIF (NOT MOAB_DIR)


FIND_PACKAGE(MOAB REQUIRED)
FIND_PACKAGE(MeshKit REQUIRED)
IF (MOAB_FOUND)
    MESSAGE(" -- MOAB Found: ${MOAB_LIBRARIES};  INCLUDE: ${MOAB_INCLUDE_DIRS}")
ENDIF (MOAB_FOUND)

IF (MeshKit_FOUND)
    MESSAGE(" -- MeshKit Found: ${MeshKit_LIBRARIES};  INCLUDE: ${MESHKIT_INCLUDE_DIRS}")
ENDIF (MeshKit_FOUND)

INCLUDE_DIRECTORIES(${SAMRAI_INCLUDE_DIRS}
        ${MOAB_INCLUDE_DIRS} ${MESHKIT_INCLUDE_DIRS} ${OCE_INCLUDE_DIRS}
        )

FILE(GLOB amr_test_SRC ./*.cpp)

add_executable(amr_test ${amr_test_SRC})


TARGET_LINK_LIBRARIES(amr_test ${MeshKit_LIBRARIES} ${OCE_LIBRARIES} ${MOAB_LIBRARIES}  ${SAMRAI_LIBRARIES} ${HDF5_LIBRARIES} ${MPI_LIBRARIES}
        concept mesh manifold model parallel toolbox data physics simulation netcdf
        )





