

SET(OCCT_PREFER_COMMUNITY_EDITION ON)

FIND_PACKAGE(OCE 0.17 REQUIRED)
MESSAGE("-- OCE Found:${OCE_LIBRARIES} INCLUDE:${OCE_INCLUDE_DIRS}")

IF (NOT MOAB_DIR)
    SET(MOAB_DIR /pkg/sigma/1.2/lib)
    SET(MeshKit_DIR /pkg/sigma/1.2/lib)
ENDIF (NOT MOAB_DIR)


FIND_PACKAGE(MOAB REQUIRED)
FIND_PACKAGE(MeshKit REQUIRED)
IF (MOAB_FOUND)
    MESSAGE(" -- MOAB Found: ${MOAB_LIBRARIES};  INCLUDE: ${MOAB_INCLUDE_DIRS}")
ENDIF (MOAB_FOUND)

IF (MeshKit_FOUND)
    MESSAGE(" -- MeshKit Found: ${MESHKIT_LIBRARIES};  INCLUDE: ${MESHKIT_INCLUDE_DIRS}")
ENDIF (MeshKit_FOUND)

INCLUDE_DIRECTORIES(
        ${MOAB_INCLUDE_DIRS} ${MESHKIT_INCLUDE_DIRS} ${OCE_INCLUDE_DIRS}
        )


add_executable(geqdsk2step geqdsk2step.cpp main.cpp)


TARGET_LINK_LIBRARIES(geqdsk2step ${MESHKIT_LIBRARIES} ${OCE_LIBRARIES} ${MOAB_LIBRARIES} ${HDF5_LIBRARIES} ${MPI_LIBRARIES} ${SAMRAI_LIBRARIES}
        concept mesh manifold model toolbox data physics simulation netcdf
        )





