FIND_PACKAGE(OCE)
IF (OCE_FOUND)
    MESSAGE("-- Found OCE:${OCE_LIBRARIES}")
ENDIF (OCE_FOUND)

#FIND_PACKAGE(MOAB)
#
#IF (MOAB_FOUND)
#    MESSAGE("-- Found MOAB: ${MOAB_LIBRARIES}")
#else ()
#    MESSAGE("MISSING MOAB !! ")
#ENDIF (MOAB_FOUND)
#
#IF (MOAB_FOUND)

#    FIND_PACKAGE(MeshKit)
LINK_DIRECTORIES(/pkg/sigma/1.2/lib)
SET(MESHKIT_LIBRARIES MeshKit emon FBiGeomMOAB MOAB cgm iGeom iMesh iRel netcdf)

SET(MESHKIT_INCLUDE_DIRS /pkg/sigma/1.2/include)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS} ${MESHKIT_INCLUDE_DIRS})

ADD_DEFINITIONS(-DMESH_DIR="/pkg/sigma/1.2")

ADD_EXECUTABLE(mk_geqdsk mk_geqdsk.cpp)

TARGET_LINK_LIBRARIES(mk_geqdsk ${MOAB_LIBRARIES} ${MESHKIT_LIBRARIES} ${OCE_LIBRARIES}  ${HDF5_LIBRARIES} ${MPI_LIBRARIES})
#ENDIF (MOAB_FOUND)

FIND_PACKAGE(Qt5Gui)
FIND_PACKAGE(Qt5Core)
#FIND_PACKAGE(Qt5Application)
FIND_PACKAGE(Qt5X11Extras)
FIND_PACKAGE(Qt5Widgets)


INCLUDE_DIRECTORIES(${OCE_INCLUDE_DIRS} ${Qt5Application_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5X11Extras_INCLUDE_DIRS})

ADD_EXECUTABLE(MakeBottle MakeBottle.cxx)

TARGET_LINK_LIBRARIES(MakeBottle ${OCE_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets)

ADD_EXECUTABLE(ebmesh ebmesh.cpp)

TARGET_LINK_LIBRARIES(ebmesh ${MESHKIT_LIBRARIES} ${MOAB_LIBRARIES} ${OCE_LIBRARIES}  ${HDF5_LIBRARIES} ${MPI_LIBRARIES}  )
